// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches shallow shapshot 1`] = `
<div
  className="src-shared-components-challenge-listing-Listing-___style__challengeCardContainer___3p0Ge"
>
  <Bucket
    bucket={Object {}}
    bucketId="MY"
    challenges={Array []}
    communityName={null}
    expand={[Function]}
    expandTag={null}
    expanded={false}
    expandedTags={Array []}
    keepPlaceholders={false}
    loadMore={null}
    loading={false}
    newChallengeDetails={false}
    openChallengesInNewTabs={false}
    setFilterState={[MockFunction]}
    setSort={[Function]}
    sort={null}
    userHandle="handle"
  />
  <Bucket
    bucket={Object {}}
    bucketId="OPEN_FOR_REGISTRATION"
    challenges={Array []}
    communityName={null}
    expand={[Function]}
    expandTag={null}
    expanded={false}
    expandedTags={Array []}
    keepPlaceholders={false}
    loadMore={null}
    loading={false}
    newChallengeDetails={false}
    openChallengesInNewTabs={false}
    setFilterState={[MockFunction]}
    setSort={[Function]}
    sort={null}
    userHandle="handle"
  />
  <Bucket
    bucket={Object {}}
    bucketId="ONGOING"
    challenges={Array []}
    communityName={null}
    expand={[Function]}
    expandTag={null}
    expanded={false}
    expandedTags={Array []}
    keepPlaceholders={false}
    loadMore={null}
    loading={false}
    newChallengeDetails={false}
    openChallengesInNewTabs={false}
    setFilterState={[MockFunction]}
    setSort={[Function]}
    sort={null}
    userHandle="handle"
  />
</div>
`;

exports[`Matches shallow shapshot 2`] = `
<div
  className="src-shared-components-challenge-listing-Listing-___style__challengeCardContainer___3p0Ge"
>
  <Bucket
    bucket={Object {}}
    bucketId="PAST"
    challenges={Array []}
    communityName={null}
    expand={[Function]}
    expandTag={null}
    expanded={true}
    expandedTags={Array []}
    keepPlaceholders={false}
    loadMore={[MockFunction]}
    loading={false}
    newChallengeDetails={false}
    openChallengesInNewTabs={false}
    setFilterState={[MockFunction]}
    setSort={[Function]}
    sort={null}
    userHandle="handle"
  />
</div>
`;

exports[`Matches shallow shapshot 3`] = `
<div
  className="src-shared-components-challenge-listing-Listing-___style__challengeCardContainer___3p0Ge"
>
  <Bucket
    bucket={Object {}}
    bucketId="UPCOMING"
    challenges={Array []}
    communityName={null}
    expand={[Function]}
    expandTag={null}
    expanded={true}
    expandedTags={Array []}
    keepPlaceholders={false}
    loadMore={[MockFunction]}
    loading={false}
    newChallengeDetails={false}
    openChallengesInNewTabs={false}
    setFilterState={[MockFunction]}
    setSort={[Function]}
    sort={null}
    userHandle="handle"
  />
</div>
`;

exports[`Matches shallow shapshot 4`] = `
<div
  className="src-shared-components-challenge-listing-Listing-___style__challengeCardContainer___3p0Ge"
>
  <Bucket
    bucket={Object {}}
    bucketId="OPEN_FOR_REGISTRATION"
    challenges={Array []}
    communityName={null}
    expand={[Function]}
    expandTag={null}
    expanded={false}
    expandedTags={Array []}
    keepPlaceholders={false}
    loadMore={null}
    loading={false}
    newChallengeDetails={false}
    openChallengesInNewTabs={false}
    setFilterState={[MockFunction]}
    setSort={[Function]}
    sort={null}
    userHandle=""
  />
  <Bucket
    bucket={Object {}}
    bucketId="ONGOING"
    challenges={Array []}
    communityName={null}
    expand={[Function]}
    expandTag={null}
    expanded={false}
    expandedTags={Array []}
    keepPlaceholders={false}
    loadMore={null}
    loading={false}
    newChallengeDetails={false}
    openChallengesInNewTabs={false}
    setFilterState={[MockFunction]}
    setSort={[Function]}
    sort={null}
    userHandle=""
  />
</div>
`;

exports[`Matches shallow shapshot 5`] = `
<div
  className="src-shared-components-challenge-listing-Listing-___style__challengeCardContainer___3p0Ge"
>
  <Bucket
    bucket={Object {}}
    bucketId="ONGOING"
    challenges={Array []}
    communityName={null}
    expand={[Function]}
    expandTag={null}
    expanded={true}
    expandedTags={Array []}
    keepPlaceholders={false}
    loadMore={null}
    loading={false}
    newChallengeDetails={false}
    openChallengesInNewTabs={false}
    setFilterState={[MockFunction]}
    setSort={[Function]}
    sort={null}
    userHandle=""
  />
</div>
`;
